# atlas

./: .checkov.yml  .dockerignore  .env.example  .gitignore  README.md  compose.yaml
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 7c98a56b9720_production_platform_primitives.py  ad8c45f6b901_domain_sitemap_discovery.py  e5fa64ce26ec_initial_schema.py
backend/scripts/: check_coverage.py  verify_benchmark.py
backend/src/atlas/: __init__.py  audit.py  auth.py  blob_store.py  config.py  db.py  enums.py  events.py  extractor.py  fetcher.py  indexer.py  jobs.py  logging.py  models.py  observability.py  pagination.py  politeness.py  retry.py  robots.py  runtime.py  scheduler.py  schemas.py  similarity.py  sitemaps.py  tasking.py  urls.py  worker.py
backend/src/atlas/api/: app.py  dependencies.py  errors.py
backend/src/atlas/api/routes/: definitions.py  documents.py  frontier.py  metrics.py  operations.py  runs.py  search.py  system.py  tasks.py
backend/src/atlas/services/: __init__.py  metrics.py  runs.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_control_plane_integration.py  test_extractor.py  test_fetcher_integration.py  test_indexer.py  test_pagination.py  test_pipeline_execution_integration.py  test_pipeline_failure_modes.py  test_retry.py  test_robots_integration.py  test_scheduler.py  test_scheduler_integration.py  test_schemas.py  test_similarity.py  test_sitemaps.py  test_tasking_integration.py  test_urls.py  test_worker.py
benchmark/: README.md
docs/: architecture.md  benchmark.md  development.md  release-checklist.md  safety.md  security-exceptions.md  slos.md  threat-model.md  tradeoffs.md
scripts/: benchmark.mjs  drain-runtime.mjs  edge-config.mjs  empty-versioned-bucket.sh  export-runtime-evidence.mjs  smoke-test.mjs  (+1 more)
(+68 files in other folders)
