[project]
name = "atlas-platform"
version = "0.1.0"
description = "Distributed crawl, extraction, indexing, and observability platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiohttp>=3.12,<4",
  "alembic>=1.16,<2",
  "boto3>=1.39,<2",
  "croniter>=6,<7",
  "defusedxml>=0.7,<1",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "opensearch-py>=3,<4",
  "orjson>=3.10,<4",
  "opentelemetry-api>=1.35,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.35,<2",
  "opentelemetry-instrumentation-fastapi>=0.56b0,<1",
  "opentelemetry-sdk>=1.35,<2",
  "protego>=0.6.2,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "prometheus-client>=0.22,<1",
  "pyjwt[crypto]>=2.10,<3",
  "redis>=6,<7",
  "rq>=2.6,<3",
  "selectolax>=0.3.32,<1",
  "sqlalchemy>=2.0.41,<2.1",
  "structlog>=25,<26",
  "trafilatura>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2,<3",
  "hypothesis>=6.135,<7",
  "pyright>=1.1.403,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
  "time-machine>=2.16,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"migrations/**/*.py" = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnusedFunction = "none"
